# Respiration-Controlled-Music

./: CHANGELOG.md  README.md  pyproject.toml
src/resp_music/: cli.py  resp_live_mod.py  resp_live_play.py  resp_prerec_mod.py  resp_prerec_play.py
src/resp_music/simulate/: resp_simulate.py
